--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 </head>
 
-<body class="common-home res layout-home6">
+<body class="common-home res layout-home6" style="background-color:#ffffff;">
     <div id="wrapper" class="wrapper-full banners-effect-7">
 		<!-- Header Container  -->
 		<header id="header" class=" variantleft type_6">
@@ -1039,7 +1039,7 @@
 															<div class="item-img-info">
 															<a href="product.html" class="lt-image" target="_self" title="Bikum masen dumas">
 																<img  class="lazyload img-1 img-responsive" data-sizes="auto" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="image/demo/shop/product/e12.jpg" alt="img" title="Apple Cinema 30&quot;" />
-																<img  class="lazyload img-2 img-responsive" data-sizes="auto" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="image/demo/shop/product/e11.jpg" alt="img" title="Apple Cinema 30&quot;" />
+																<img  class="lazyload img-2 img-responsive" data-sizes="auto" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="image/demo/shop/product/e12.jpg" alt="img" title="Apple Cinema 30&quot;" />
 															</a>
 															</div>
 														</div>
@@ -1075,8 +1075,8 @@
 														<div class="item-image">
 															<div class="item-img-info">
 															<a href="product.html" class="lt-image" target="_self" title="Bikum masen dumas">
-																<img  class="lazyload img-1 img-responsive" data-sizes="auto" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="image/demo/shop/product/e4.jpg" alt="img" title="Apple Cinema 30&quot;" />
-																<img  class="lazyload img-2 img-responsive" data-sizes="auto" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="image/demo/shop/product/e4_2.jpg" alt="img" title="Apple Cinema 30&quot;"  />
+																<img  class="lazyload img-1 img-responsive" data-sizes="auto" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="image/demo/shop/product/e12.jpg" alt="img" title="Apple Cinema 30&quot;" />
+																<img  class="lazyload img-2 img-responsive" data-sizes="auto" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="image/demo/shop/product/e12.jpg" alt="img" title="Apple Cinema 30&quot;"  />
 															</a>
 															</div>
 														</div>
@@ -1112,8 +1112,8 @@
 														<div class="item-image">
 															<div class="item-img-info">
 															<a href="product.html" class="lt-image" target="_self" title="Bikum masen dumas">
-																<img  class="lazyload img-1 img-responsive" data-sizes="auto" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="image/demo/shop/product/e13.jpg" alt="img" title="Apple Cinema 30&quot;" />
-																<img  class="lazyload img-2 img-responsive" data-sizes="auto" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="image/demo/shop/product/e14.jpg" alt="img" title="Apple Cinema 30&quot;" />
+																<img  class="lazyload img-1 img-responsive" data-sizes="auto" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="image/demo/shop/product/e12.jpg" alt="img" title="Apple Cinema 30&quot;" />
+																<img  class="lazyload img-2 img-responsive" data-sizes="auto" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="image/demo/shop/product/e12.jpg" alt="img" title="Apple Cinema 30&quot;" />
 															</a>
 															</div>
 														</div>
@@ -1149,8 +1149,8 @@
 														<div class="item-image">
 															<div class="item-img-info">
 															<a href="product.html" class="lt-image" target="_self" title="Bikum masen dumas">
-																<img  class="lazyload img-1 img-responsive" data-sizes="auto" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="image/demo/shop/product/2.png" alt="img" title="Apple Cinema 30&quot;" />
-																<img  class="lazyload img-2 img-responsive" data-sizes="auto" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="image/demo/shop/product/1.png" alt="img" title="Apple Cinema 30&quot;" />
+																<img  class="lazyload img-1 img-responsive" data-sizes="auto" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="image/demo/shop/product/e12.jpg" alt="img" title="Apple Cinema 30&quot;" />
+																<img  class="lazyload img-2 img-responsive" data-sizes="auto" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="image/demo/shop/product/e12.jpg" alt="img" title="Apple Cinema 30&quot;" />
 															</a>
 															</div>
 														</div>
